# omni-ai-chat

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  env.example  start.sh
backend/: .env.example  Dockerfile  README_SSE_ARCHITECTURE.md  celery_app.py  cleanup_redis.py  main.py  purge_celery.py  pyproject.toml  start_celery.py  tasks.py
backend/db/: engine.py
frontend/: Dockerfile  bun.lockb  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/public/: site.webmanifest
frontend/src/: App.tsx  index.css  main.tsx  markdown.css  routeTree.gen.ts
frontend/src/components/auth/: GitHubLoginButton.tsx
frontend/src/components/chat/: ChatInput.tsx  ChatLayout.tsx  ChatList.tsx  ChatSettingsPopover.tsx  FloatingChatContainer.tsx  Message.tsx  ModelSelector.tsx  SearchModal.tsx
frontend/src/components/magicui/: border-beam.tsx
frontend/src/components/motion-primitives/: morphing-popover.tsx  text-shimmer-wave.tsx
frontend/src/components/ui/: VoiceRecordButton.tsx  dialog.tsx  sheet.tsx
frontend/src/lib/: atoms.ts  eventsource.ts  queries.ts  theme-context.tsx  theme.ts  websocket.ts
frontend/src/lib/api/: auth.ts  chat.ts
frontend/src/lib/hooks/: useVoiceRecording.ts
frontend/src/routes/: __root.tsx  chat.$chatId.tsx  index.tsx
